tests/local-04/out.txt
error: undefined value identifier: x
  ┌─ inp.sml:5:9
  │
5 │ val _ = x
  │         ^

typechecking failed
